  - Africa literacy rate debuffs strengthened (productivity 4x, education costs 2x), so AI needs more time to develop
  - African Union reforms strengthened to offset the literacy debuffs, allowing player to still achieve rapid development of African nations
  - Technology productivity bonuses reduced by 50%, AI and late-game computing tech bonuses massively buffed

 Bugfix:
  - Fixed broken variant upgrade for Artillery 2005 by renaming non-NSB artillery technologies to avoid name collision with equipment (Issue #334)
  - [BLR] Fixed factory locations in Belarus focuses - factories now build in correct provinces (Issue #236):
    - Pinskdrev now builds civilian factory in Brest oblast (was random)
    - Hi-Tech Park now builds office in Minsk (was random)
    - Delta City Business Center now builds office in Minsk (was random)
    - Minsk Tractor Plant now builds civilian factory in Minsk (was random)
    - 558 Aircraft Repair Plant now builds military factory in Brest oblast (was civilian in random location)
    - Peleng now builds civilian factory in Minsk (was random)
    - Minotor-Service now builds military factory in Minsk (was random)
  - [BLR] Removed spurious fossil fuel powerplants from 12 Belarus focuses that incorrectly added powerplants alongside factories
  - [BLR] Restored missing civilian factory to BASF Societas Europaea focus
  - [BLR] Added missing description for Peleng focus
  - Added missing intelligence agency advisors for spymaster role (Issue #110)
  - Fixed SAM missile icons not matching their equipment variants in deployment UI (Issue #218)
  - Fixed Linux runtime crashes caused by parsing errors (Issue #176)
  - Fixed configurable display showing 0 for all resources and added microchips/composites support (Issue #288)
    - Net resource calculation now properly uses produced + imported - exported - consumed
    - Added microchips and advanced composites as new resource options in the topbar counter