@@ -2225,42 +2225,44 @@
  CURRENT_ORGANIZATION: "£organization_texticon  Organization: $CUR|0Y$/$MAX|0Y$"
 
 # Other Modifiers for Ships
- modifier_experience_gain_attack_submarine_training_factor: "Experience gained during training"
- modifier_experience_gain_attack_submarine_combat_factor: "Experience gained during combat"
- modifier_experience_gain_diesel_attack_submarine_training_factor: "Experience gained during training"
- modifier_experience_gain_diesel_attack_submarine_combat_factor: "Experience gained during combat"
- modifier_experience_gain_missile_submarine_training_factor: "Experience gained during training"
- modifier_experience_gain_missile_submarine_combat_factor: "Experience gained during combat"
- modifier_experience_gain_Nuclear_carrier_training_factor: "Experience gained during training"
- modifier_experience_gain_Nuclear_carrier_combat_factor: "Experience gained during combat"
- modifier_experience_gain_carrier_training_factor: "Experience gained during training"
- modifier_experience_gain_carrier_combat_factor: "Experience gained during combat"
- modifier_experience_gain_LHA_training_factor: "Experience gained during training"
- modifier_experience_gain_LHA_combat_factor: "Experience gained during combat"
- modifier_experience_gain_LPD_training_factor: "Experience gained during training"
- modifier_experience_gain_LPD_combat_factor: "Experience gained during combat"
- modifier_experience_gain_nuclear_cruiser_training_factor: "Experience gained during training"
- modifier_experience_gain_nuclear_cruiser_combat_factor: "Experience gained during combat"
- modifier_experience_gain_cruiser_training_factor: "Experience gained during training"
- modifier_experience_gain_cruiser_combat_factor: "Experience gained during combat"
- modifier_experience_gain_destroyer_training_factor: "Experience gained during training"
- modifier_experience_gain_destroyer_combat_factor: "Experience gained during combat"
- modifier_experience_gain_frigate_training_factor: "Experience gained during training"
- modifier_experience_gain_frigate_combat_factor: "Experience gained during combat"
- modifier_experience_gain_corvette_training_factor: "Experience gained during training"
- modifier_experience_gain_corvette_combat_factor: "Experience gained during combat"
- modifier_experience_gain_helicopter_operator_training_factor: "Experience gained during training"
- modifier_experience_gain_helicopter_operator_combat_factor: "Experience gained during combat"
- modifier_experience_gain_battle_cruiser_training_factor: "Experience gained during training"
- modifier_experience_gain_battle_cruiser_combat_factor: "Experience gained during combat"
- modifier_experience_gain_battleship_training_factor: "Experience gained during training"
- modifier_experience_gain_battleship_combat_factor: "Experience gained during combat"
- modifier_experience_gain_stealth_frigate_training_factor: "Experience gained during training"
- modifier_experience_gain_stealth_frigate_combat_factor: "Experience gained during combat"
- modifier_experience_gain_stealth_corvette_training_factor: "Experience gained during training"
- modifier_experience_gain_stealth_corvette_combat_factor: "Experience gained during combat"
- modifier_experience_gain_stealth_destroyer_training_factor: "Experience gained during training"
- modifier_experience_gain_stealth_destroyer_combat_factor: "Experience gained during combat"
+ modifier_experience_gain_submarine_training_factor: "£experience_neutral_training_texticon  Submarine Training Experience Gain"
+ modifier_experience_gain_submarine_combat_factor: "£experience_neutral_combat_texticon  Submarine Combat Experience Gain"
+ modifier_experience_gain_attack_submarine_training_factor: "£experience_neutral_training_texticon  Attack Submarine Training Experience Gain"
+ modifier_experience_gain_attack_submarine_combat_factor: "£experience_neutral_combat_texticon  Attack Submarine Combat Experience Gain"
+ modifier_experience_gain_diesel_attack_submarine_training_factor: "£experience_neutral_training_texticon  Diesel Attack Submarine Training Experience Gain"
+ modifier_experience_gain_diesel_attack_submarine_combat_factor: "£experience_neutral_combat_texticon  Diesel Attack Submarine Combat Experience Gain"
+ modifier_experience_gain_missile_submarine_training_factor: "£experience_neutral_training_texticon  Missile Submarine Training Experience Gain"
+ modifier_experience_gain_missile_submarine_combat_factor: "£experience_neutral_combat_texticon  Missile Submarine Combat Experience Gain"
+ modifier_experience_gain_Nuclear_carrier_training_factor: "£experience_neutral_training_texticon  Nuclear Carrier Training Experience Gain"
+ modifier_experience_gain_Nuclear_carrier_combat_factor: "£experience_neutral_combat_texticon  Nuclear Carrier Combat Experience Gain"
+ modifier_experience_gain_carrier_training_factor: "£experience_neutral_training_texticon  Carrier Training Experience Gain"
+ modifier_experience_gain_carrier_combat_factor: "£experience_neutral_combat_texticon  Carrier Combat Experience Gain"
+ modifier_experience_gain_LHA_training_factor: "£experience_neutral_training_texticon  LHA (Landing Helicopter Assault) Training Experience Gain"
+ modifier_experience_gain_LHA_combat_factor: "£experience_neutral_combat_texticon  LHA (Landing Helicopter Assault) Combat Experience Gain"
+ modifier_experience_gain_LPD_training_factor: "£experience_neutral_training_texticon  LPD (Landing Platform Dock) Training Experience Gain"
+ modifier_experience_gain_LPD_combat_factor: "£experience_neutral_combat_texticon  LPD (Landing Platform Dock) Combat Experience Gain"
+ modifier_experience_gain_nuclear_cruiser_training_factor: "£experience_neutral_training_texticon  Nuclear Cruiser Training Experience Gain"
+ modifier_experience_gain_nuclear_cruiser_combat_factor: "£experience_neutral_combat_texticon  Nuclear Cruiser Combat Experience Gain"
+ modifier_experience_gain_cruiser_training_factor: "£experience_neutral_training_texticon  Cruiser Training Experience Gain"
+ modifier_experience_gain_cruiser_combat_factor: "£experience_neutral_combat_texticon  Cruiser Combat Experience Gain"
+ modifier_experience_gain_destroyer_training_factor: "£experience_neutral_training_texticon  Destroyer Training Experience Gain"
+ modifier_experience_gain_destroyer_combat_factor: "£experience_neutral_combat_texticon  Destroyer Combat Experience Gain"
+ modifier_experience_gain_frigate_training_factor: "£experience_neutral_training_texticon  Frigate Training Experience Gain"
+ modifier_experience_gain_frigate_combat_factor: "£experience_neutral_combat_texticon  Frigate Combat Experience Gain"
+ modifier_experience_gain_corvette_training_factor: "£experience_neutral_training_texticon  Corvette Training Experience Gain"
+ modifier_experience_gain_corvette_combat_factor: "£experience_neutral_combat_texticon  Corvette Combat Experience Gain"
+ modifier_experience_gain_helicopter_operator_training_factor: "£experience_neutral_training_texticon  Helicopter Carrier Training Experience Gain"
+ modifier_experience_gain_helicopter_operator_combat_factor: "£experience_neutral_combat_texticon  Helicopter Carrier Combat Experience Gain"
+ modifier_experience_gain_battle_cruiser_training_factor: "£experience_neutral_training_texticon  Battlecruiser Training Experience Gain"
+ modifier_experience_gain_battle_cruiser_combat_factor: "£experience_neutral_combat_texticon  Battlecruiser Combat Experience Gain"
+ modifier_experience_gain_battleship_training_factor: "£experience_neutral_training_texticon  Battleship Training Experience Gain"
+ modifier_experience_gain_battleship_combat_factor: "£experience_neutral_combat_texticon  Battleship Combat Experience Gain"
+ modifier_experience_gain_stealth_frigate_training_factor: "£experience_neutral_training_texticon  Stealth Frigate Training Experience Gain"
+ modifier_experience_gain_stealth_frigate_combat_factor: "£experience_neutral_combat_texticon  Stealth Frigate Combat Experience Gain"
+ modifier_experience_gain_stealth_corvette_training_factor: "£experience_neutral_training_texticon  Stealth Corvette Training Experience Gain"
+ modifier_experience_gain_stealth_corvette_combat_factor: "£experience_neutral_combat_texticon  Stealth Corvette Combat Experience Gain"
+ modifier_experience_gain_stealth_destroyer_training_factor: "£experience_neutral_training_texticon  Stealth Destroyer Training Experience Gain"
+ modifier_experience_gain_stealth_destroyer_combat_factor: "£experience_neutral_combat_texticon  Stealth Destroyer Combat Experience Gain"
 
  # Missile Production
  olv_production_speed_modifier: "OLV Contruction Speed"
