@@ -95,6 +95,10 @@ v2.0.0
   - Technology productivity bonuses reduced by 50%, AI and late-game computing tech bonuses massively buffed
 
  Bugfix:
+  - Fixed ship experience gain modifiers not showing ship type in tooltips (Issue #354)
+    - All naval unit experience modifiers now display their ship type (e.g., "Destroyer Training Experience Gain")
+    - Added missing submarine training/combat experience gain modifiers
+    - Affected ships: submarines, carriers, cruisers, destroyers, frigates, corvettes, battleships, etc.
   - Fixed broken variant upgrade for Artillery 2005 by renaming non-NSB artillery technologies to avoid name collision with equipment (Issue #334)
   - [BLR] Fixed factory locations in Belarus focuses - factories now build in correct provinces (Issue #236):
     - Pinskdrev now builds civilian factory in Brest oblast (was random)
